Added a button linking to the store to main-block div

commit 6
--------
Fixed mobile responsiveness for smaller screens
Removed main-block image from landscape mobile viewports

commit 7
--------
Added animations to the main-block content
Added in-between sections to page
Added new sections with background images
Made page parallax

commit 8
--------
Fixed a bug causing the product description to hide until scroll

commit 9
--------
Potential fix for mobile background image bug

commit 10
---------
Added logo to landing page
Changed video.css to landing.css and removed its stylesheet reference in landing.html
Added buttons linking to landing pages

commit 11
---------
Applied z-index to buttons on landing page
Changed cursor and color of landing page buttons on hover

commit 12
---------
Changed the tagline on index.html
Changed url of shop button on index.html

commit 13
---------
Updated landing page mission statement and tagline
Changed landing page button to "Learn More"
Added section below to link to residential and commercial pages
Changed tagline on residential page

commit 14
---------
Changed background position of services to scroll for mobile
Added store button to landing page
Removed clutter on landing page
Updated mobile layout on landing page to fit multiple buttons

commit 15
---------
Fixed mobile resizing issues for landing page buttons

commit 16
---------
Added link to residential page

commit 17
---------
Removed Learn More button on landing page
Added down arrow to landing page
Created JavaScript file for future landing page functionality
Added descriptions for each service (commercial and enterprise)
Added icons to descriptions for each service
Linked services to respective pages (some pages not complete)
Added enterprise.html 

commit 18
---------
Fixed resizing issues on residential (and enterprise)
Bolded current link on navbar
Added items to navbar
Took residential template and uniquely applied it to enterprise