@@ -101,6 +101,10 @@
 /* Medium */
 @media only screen and (max-width: 992px) {
     
+    .product-image img {
+        width: 75%;
+    }
+
 }
 
 /* Small */
