@@ -11,6 +11,8 @@
     <title>Ekho Comm</title>
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+    <!-- FontAwesome Icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
@@ -42,7 +44,7 @@
             </div>
             <div class="row">
                 <div class="arrow-wrapper col-md-12">
-                    <img src="/img/arrow-alt-circle-down.svg" alt="" class="arrow-down img-fluid">
+                    <i class="fas fa-arrow-circle-down fa-5x"></i>
                 </div>
             </div>
         </div>
@@ -54,15 +56,15 @@
                     <h3>Commercial</h3>
                 </div>
                 <div class="service-item">
-                    <img src="/img/home.svg" alt="">
+                    <i class="fas fa-home fa-5x"></i>
                     <h4>Home</h4>
                 </div>
                 <div class="service-item">
-                    <img src="/img/car.svg" alt="">
+                    <i class="fas fa-car fa-5x"></i>
                     <h4>Auto</h4>
                 </div>
                 <div class="service-item">
-                    <img src="/img/gas-pump.svg" alt="">
+                    <i class="fas fa-gas-pump fa-5x"></i>
                     <h4>RV</h4>
                 </div>
                 <div class="service-link">
@@ -74,15 +76,15 @@
                     <h3>Enterprise</h3>
                 </div>
                 <div class="service-item">
-                    <img src="/img/building.svg" alt="">
+                    <i class="fas fa-building fa-5x"></i>
                     <h4>Office</h4>
                 </div>
                 <div class="service-item">
-                    <img src="/img/school.svg" alt="">
+                    <i class="fas fa-school fa-5x"></i>
                     <h4>School</h4>
                 </div>
                 <div class="service-item">
-                    <img src="/img/hospital.svg" alt="">
+                    <i class="fas fa-hospital fa-5x"></i>
                     <h4>Hospital</h4>
                 </div>
                 <div class="service-link">
